--- a/resources/css/filter.css
+++ b/resources/css/filter.css
@@ -76,15 +76,15 @@
     }
 } */
 
-.main {
+/* .main {
     max-width: 1000px;
     margin: auto;
-}
+} */
 
-h1 {
+/* h1 {
     font-size: 50px;
     word-break: break-all;
-}
+} */
 
 .row {
     margin: 10px -16px;
@@ -122,7 +122,7 @@ h1 {
 }
 
 /* Style the buttons */
-.btn {
+/* .btn1 {
     border: none;
     outline: none;
     padding: 12px 16px;
@@ -130,11 +130,11 @@ h1 {
     cursor: pointer;
 }
 
-.btn:hover {
+.btn1:hover {
     background-color: #ddd;
 }
 
-.btn.active {
+.btn1.active {
     background-color: #666;
     color: white;
-}
+} */
